--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,7 +122,7 @@ body {
 /* Brawn Banner */
 .brand-container {
   background-color: #fff;
-  padding: 20px 0;
+  padding: 3vh 0;
   text-align: center;
   width: 100%;
   position: fixed;
@@ -148,9 +148,9 @@ body {
 
 /* Adjusting the spacing between Navbar and Content */
 .pages {
-  max-width: 1400px;
-  padding: 20px;
-  margin: 120px auto 0 auto;
+  height: 89vh;
+  max-width: 100vw;
+  padding: 10vh 20px 20px 60px;
 }
 
 /* Grid Layout */
