--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,9 @@
-/* Google Font */
-/* src/tailwind.css */
+
+
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
 
-/* Root Variables */
+
 :root {
   --primary: #1aac83;
   --error: #e7195a;
@@ -12,14 +12,14 @@
   --navbar-text-color: white;
 }
 
-/* Base Styles */
+
 body {
   background: #f1f1f1;
   margin: 0;
   font-family: "Poppins", sans-serif;
 }
 
-/* Navbar Styles */
+
 .navbar {
   position: fixed;
   top: 0;
@@ -56,7 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 0;
-  margin-top: 20px; /* Add space between toggle button and content */
+  margin-top: 20px; 
 }
 
 .navbar-item {
@@ -76,7 +76,7 @@ body {
 
 .navbar-logo {
   font-size: 25px;
-  width: 25px; /* Adjust width to be consistent with the logo size */
+  width: 25px; 
   text-align: center;
 }
 
@@ -84,7 +84,7 @@ body {
   opacity: 0;
   transition: opacity 0.3s ease;
   margin-left: 10px;
-  flex: 1; /* Ensure text takes up remaining space */
+  flex: 1; 
   text-align: left;
 }
 
@@ -100,7 +100,7 @@ body {
   justify-content: flex-start;
 }
 
-/* Overlay for Expanded Navbar */
+
 .overlay {
   position: fixed;
   top: 0;
@@ -119,7 +119,7 @@ body {
   pointer-events: all;
 }
 
-/* Brawn Banner */
+
 .brand-container {
   background-color: #fff;
   padding: 3vh 0;
@@ -139,7 +139,7 @@ body {
 
 .brand-Container {
   max-height: 300px;
-  /* vertical-align: middle; */
+  
   justify-content: center;
 }
 
@@ -155,14 +155,14 @@ body {
   color: #333;
 }
 
-/* Adjusting the spacing between Navbar and Content */
+
 .pages {
   height: 88vh;
   max-width: 100vw;
   padding: 12vh 20px 0px calc(50px + 20px);
 }
 
-/* Grid Layout */
+
 .home {
   display: flex;
   flex-direction: column;
@@ -193,7 +193,7 @@ body {
   }
 }
 
-/* Routines Page */
+
 .routine-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -280,7 +280,7 @@ body {
 }
 
 
-/* Add Routine Button */
+
 .add-routine-btn {
   background: #fff;
   border: 2px dashed var(--primary);
@@ -298,7 +298,7 @@ body {
   color: #fff;
 }
 
-/* Modal Styles */
+
 .modal {
   display: flex;
   justify-content: center;
@@ -329,7 +329,7 @@ body {
   font-size: 30px;
 }
 
-/* Modal buttons */
+
 .modal-buttons {
   display: flex;
   gap: 10px;
@@ -366,7 +366,7 @@ body {
   background-color: darkred;
 }
 
-/* Workout */
+
 
 .Workout-Title h1{
   margin: 10;
@@ -458,7 +458,7 @@ body {
   transition: 0.2s ease-in;
 }
 
-/* New Workout Form */
+
 label {
   display: flex;
   color: var(--primary);
@@ -521,7 +521,7 @@ div.error {
   text-align: center;
 }
 
-/* Modal styles */
+
 .modal {
   display: flex;
   justify-content: center;
@@ -552,7 +552,7 @@ div.error {
   font-size: 30px;
 }
 
-/* Button styles */
+
 
 .back-buttons-row {
   display: flex;
@@ -561,8 +561,8 @@ div.error {
 
 .add-workout-btn-row{
   display: flex;
-  justify-content: center;  /* Horizontally center the div */
-  align-items: center;      /* Vertically center the div */
+  justify-content: center;  
+  align-items: center;      
 
 }
 .add-workout-btn {
@@ -639,7 +639,6 @@ div.error {
   transition-timing-function: ease-in;
 }
 
-/* Responsiveness */
 @media (max-width: 768px) {
   .navbar {
     width: 50px;
