--- a/frontend/src/custom-components/Navigation/navigation.css
+++ b/frontend/src/custom-components/Navigation/navigation.css
@@ -95,3 +95,12 @@
     opacity: 1;
     pointer-events: all;
 }
+
+@media (max-width: 768px) {
+    .navbar.expanded {
+        width: 200px;
+    }
+    .navbar.collapsed+.content {
+        margin-left: 50px;
+    }
+}
