--- a/frontend/src/custom-components/Workout/workout.css
+++ b/frontend/src/custom-components/Workout/workout.css
@@ -25,7 +25,7 @@
 
 .routine-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(300px));
     gap: 20px;
 }
 
