styling for mobile is clean howevert the styling for the desktop is not looking good right now

--- a/frontend/src/custom-components/Workout/workout.css
+++ b/frontend/src/custom-components/Workout/workout.css
@@ -115,7 +115,7 @@
     transition: 0.2s ease-in;
 }
 .Workout-Title h1 {
-    margin: 10;
+    margin: 5px;
     text-align: center;
 }
 .workout-details {
