--- a/frontend/src/custom-components/Workout/workout.css
+++ b/frontend/src/custom-components/Workout/workout.css
@@ -44,6 +44,7 @@
     flex-direction: column;
     justify-content: space-between;
     min-width: 300px;
+    cursor: pointer;
 }
 
 .routine-details:hover {
