--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
     --navbar-bg: #1aac83;
     --navbar-hover: #117559;
     --navbar-text-color: white;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 body {
@@ -32,6 +32,7 @@ body {
     height: 88vh;
     max-width: 100vw;
     padding: 9vh 20px 0px calc(50px + 20px);
+    overflow-x: hidden !important;
 }
 
 .home {
