some css changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
     --navbar-hover: #117559;
     --navbar-text-color: white;
     overflow-x: hidden !important;
+    font-family: sans-serif;
 }
 
 body {
