--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,6 +35,14 @@ body {
     padding: 9vh 30px 0px calc(50px + 30px);
     overflow-x: hidden !important;
 }
+@media(max-width: 768px) {
+    .pages{
+        height: 88vh;
+        max-width: 100vw;
+        padding: 9vh 20px 0px calc(50px + 20px);
+        overflow-x: hidden !important;
+    }
+}
 
 .home {
     display: flex;
