--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,9 +80,11 @@ input {
 .checkbox-input {
     height: 20px;
     width: 20px;
-    margin-left: 20px;
     margin-top: 20px;
+    margin-left: 8px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 
 .time-based {
